--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,45 +1,20 @@
 ---
 subject: My Email Subject
 ---
-<container>
-  <row>
-    <columns small="12" large="12">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit totam quasi ab aliquam saepe non fugiat laborum, veniam corporis alias impedit est nesciunt. Provident numquam cum libero vero minus fuga.</p>
-    </columns>
-  </row>
-  <row class="collapse">
-    <columns small="12" large="12">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit totam quasi ab aliquam saepe non fugiat laborum, veniam corporis alias impedit est nesciunt. Provident numquam cum libero vero minus fuga.</p>
-    </columns>
-  </row>
-  <row>
-    <columns small="12" large="6">
-      <p>One Word</p>
-    </columns>
-    <columns small="12" large="6">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure perferendis praesentium quia distinctio, assumenda dolor pariatur! Dolore perspiciatis ratione consequuntur obcaecati cumque molestias, corporis fugiat blanditiis, sit nisi deleniti beatae?</p>
-    </columns>
-  </row>
-  <row>
-    <columns small="12" large="2">
-      <p>One word</p>
-    </columns>
-    <columns small="12" large="4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus velit eveniet est odit doloribus minus, reprehenderit vitae excepturi numquam repellendus natus consectetur dolorem. Quam, voluptatem non aperiam rem voluptas sequi?</p>
-    </columns>
-    <columns small="12" large="6">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus velit eveniet est odit doloribus minus, reprehenderit vitae excepturi numquam repellendus natus consectetur dolorem. Quam, voluptatem non aperiam rem voluptas sequi?</p>
-    </columns>
-  </row>
-  <row>
-    <columns small="12" large="2">
-      <p>One Word</p>
-    </columns>
-    <columns small="4" large="4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga repellendus velit aut perferendis, eveniet delectus maxime quisquam recusandae assumenda culpa tenetur dolorem error voluptatibus. Animi accusamus molestiae placeat, sequi beatae.</p>
-    </columns>
-    <columns small="8" large="6">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis quis obcaecati facere dolore laborum officia rem praesentium cumque culpa delectus alias ullam ad, doloremque, ipsa asperiores ex sit necessitatibus minima!</p>
-    </columns>
-  </row>
-</container>
+
+<wrapper class="block header" bgcolor="#1FC28F">
+  <container class="header">
+    <row>
+      <columns valign="middle" style="padding: 10px; background-color: #1FC28F;">
+        <h1 class="text-center" style="margin-bottom: 0;">Faster Scale App Report</h1>
+      </columns>
+    </row>
+    <row>
+      <columns>
+        <h1>Hi, Susan Calvin</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iste, amet consequatur a veniam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut optio nulla et, fugiat. Maiores accusantium nostrum asperiores provident, quam modi ex inventore dolores id aspernatur architecto odio minima perferendis, explicabo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima quos quasi itaque beatae natus fugit provident delectus, magnam laudantium odio corrupti sit quam. Optio aut ut repudiandae velit distinctio asperiores?</p>
+      </columns>
+    </row>
+  </container>
+</wrapper>
