Looking good so far!

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,19 +2,121 @@
 subject: My Email Subject
 ---
 
-<wrapper class="block header" bgcolor="#1FC28F">
+  <spacer size="16"></spacer>
+
   <container class="header">
     <row>
-      <columns valign="middle" style="padding: 10px; background-color: #1FC28F;">
+      <columns valign="middle" style="background-color: #1FC28F;">
         <h1 class="text-center" style="margin-bottom: 0;">Faster Scale App Report</h1>
       </columns>
     </row>
     <row>
       <columns>
-        <h1>Hi, Susan Calvin</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iste, amet consequatur a veniam.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut optio nulla et, fugiat. Maiores accusantium nostrum asperiores provident, quam modi ex inventore dolores id aspernatur architecto odio minima perferendis, explicabo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima quos quasi itaque beatae natus fugit provident delectus, magnam laudantium odio corrupti sit quam. Optio aut ut repudiandae velit distinctio asperiores?</p>
+        <p>Hello there! Erreth has set you as one of their report recipients.
+        These reports are sent out when Erreth scores above 5 in their checkin.
+        This means that they might be struggling emotionally, and you should
+        contact them to see how they are. Their report results are below. You
+        can reply to this email, and it will go directly to your friend.</p>
       </columns>
     </row>
   </container>
-</wrapper>
+
+  <spacer size="16"></spacer>
+
+  <container class="questions">
+    <row>
+      <columns valign="middle">
+        <h2 style="margin-bottom: 0;">Erreth's Responses:</h2>
+      </columns>
+    </row>
+    <row>
+      <columns>
+    <h4>changes in goals</h4>
+    <p><strong>How does it affect me? How do I act and feel?</strong> 
+    Look, just because I don't be givin' no man a foot massage don't make it
+    right for Marsellus to throw Antwone into a glass motherfuckin' house,
+    fuckin' up the way the nigger talks. Motherfucker do that shit to me, he
+    better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm
+    sayin'?</p>
+    <p><strong>How does it affect the important people in my life?</strong>
+    The path of the righteous man is beset on all sides by the iniquities
+    of the selfish and the tyranny of evil men. Blessed is he who, in the name
+    of charity and good will, shepherds the weak through the valley of darkness,
+    for he is truly his brother's keeper and the finder of lost children. And I
+    will strike down upon thee with great vengeance and furious anger those who
+    would attempt to poison and destroy My brothers. And you will know My name
+    is the Lord when I lay My vengeance upon thee.</p>
+    <p><strong>Why do I do this? What is the benefit for me?</strong>
+    ur bones don't break, mine do. That's clear. Your cells react to bacteria
+    and viruses differently than mine. You don't get sick, I do. That's also
+    clear. But for some reason, you and I react the exact same way to water. We
+    swallow it too fast, we choke. We get some in our lungs, we drown. However
+    unreal it may seem, we are connected, you and I. We're on the same curve,
+    just on opposite ends.</p>
+    <h4>being resentful</h4>
+    <p><strong>How does it affect me? How do I act and feel?</strong> 
+    Look, just because I don't be givin' no man a foot massage don't make it
+    right for Marsellus to throw Antwone into a glass motherfuckin' house,
+    fuckin' up the way the nigger talks. Motherfucker do that shit to me, he
+    better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm
+    sayin'?</p>
+    <p><strong>How does it affect the important people in my life?</strong>
+    The path of the righteous man is beset on all sides by the iniquities
+    of the selfish and the tyranny of evil men. Blessed is he who, in the name
+    of charity and good will, shepherds the weak through the valley of darkness,
+    for he is truly his brother's keeper and the finder of lost children. And I
+    will strike down upon thee with great vengeance and furious anger those who
+    would attempt to poison and destroy My brothers. And you will know My name
+    is the Lord when I lay My vengeance upon thee.</p>
+    <p><strong>Why do I do this? What is the benefit for me?</strong>
+    ur bones don't break, mine do. That's clear. Your cells react to bacteria
+    and viruses differently than mine. You don't get sick, I do. That's also
+    clear. But for some reason, you and I react the exact same way to water. We
+    swallow it too fast, we choke. We get some in our lungs, we drown. However
+    unreal it may seem, we are connected, you and I. We're on the same curve,
+    just on opposite ends.</p>
+      </columns>
+    </row>
+  </container>
+
+  <spacer size="16"></spacer>
+
+  <container class="behaviors">
+    <row>
+      <columns valign="middle" style="padding: 10px;">
+        <h2 style="margin-bottom: 0;">Selected Emotions:</h2>
+      </columns>
+    </row>
+    <row>
+      <columns>
+      <p><strong>Restoration</strong><br />
+      resolving problems<br />
+      reaching out to others</p>
+
+      <p><strong>Forgetting Priorities</strong><br />
+      changes in goals<br />
+      obsessed with relationships<br />
+      preoccupation with material things, television, or entertainment</p>
+
+      <p><strong>Anxiety</strong><br />
+      being resentful<br />
+      trouble concentrating<br />
+      seeking/creating drama<br />
+      using over-the-counter medication for pain, sleep, and weight control<br
+            />
+      making goals and lists you can't complete</p>
+
+      <p><strong>Speeding Up</strong><br />
+      can't relax<br />
+      avoiding slowing down<br />
+      feeling driven<br />
+      overspending<br />
+      can't identify own feelings/needs<br />
+      repetitive, negative thoughts<br />
+      too much caffeine<br />
+      difficulty being alone or with people</p>
+      </columns>
+    </row>
+  </container>
+
+  <spacer size="16"></spacer>
