Adding in a footer

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -31,50 +31,39 @@ subject: Faster Scale App Report
     </row>
     <row>
       <columns>
-    <h4>changes in goals</h4>
-    <p><strong>How does it affect me? How do I act and feel?</strong> 
-    Look, just because I don't be givin' no man a foot massage don't make it
-    right for Marsellus to throw Antwone into a glass motherfuckin' house,
-    fuckin' up the way the nigger talks. Motherfucker do that shit to me, he
-    better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm
-    sayin'?</p>
-    <p><strong>How does it affect the important people in my life?</strong>
-    The path of the righteous man is beset on all sides by the iniquities
-    of the selfish and the tyranny of evil men. Blessed is he who, in the name
-    of charity and good will, shepherds the weak through the valley of darkness,
-    for he is truly his brother's keeper and the finder of lost children. And I
-    will strike down upon thee with great vengeance and furious anger those who
-    would attempt to poison and destroy My brothers. And you will know My name
-    is the Lord when I lay My vengeance upon thee.</p>
-    <p><strong>Why do I do this? What is the benefit for me?</strong>
-    ur bones don't break, mine do. That's clear. Your cells react to bacteria
-    and viruses differently than mine. You don't get sick, I do. That's also
-    clear. But for some reason, you and I react the exact same way to water. We
-    swallow it too fast, we choke. We get some in our lungs, we drown. However
-    unreal it may seem, we are connected, you and I. We're on the same curve,
-    just on opposite ends.</p>
-    <h4>being resentful</h4>
-    <p><strong>How does it affect me? How do I act and feel?</strong> 
-    Look, just because I don't be givin' no man a foot massage don't make it
-    right for Marsellus to throw Antwone into a glass motherfuckin' house,
-    fuckin' up the way the nigger talks. Motherfucker do that shit to me, he
-    better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm
-    sayin'?</p>
-    <p><strong>How does it affect the important people in my life?</strong>
-    The path of the righteous man is beset on all sides by the iniquities
-    of the selfish and the tyranny of evil men. Blessed is he who, in the name
-    of charity and good will, shepherds the weak through the valley of darkness,
-    for he is truly his brother's keeper and the finder of lost children. And I
-    will strike down upon thee with great vengeance and furious anger those who
-    would attempt to poison and destroy My brothers. And you will know My name
-    is the Lord when I lay My vengeance upon thee.</p>
-    <p><strong>Why do I do this? What is the benefit for me?</strong>
-    ur bones don't break, mine do. That's clear. Your cells react to bacteria
-    and viruses differently than mine. You don't get sick, I do. That's also
-    clear. But for some reason, you and I react the exact same way to water. We
-    swallow it too fast, we choke. We get some in our lungs, we drown. However
-    unreal it may seem, we are connected, you and I. We're on the same curve,
-    just on opposite ends.</p>
+        <h4>changes in goals</h4>
+        <p><strong>How does it affect me? How do I act and feel?</strong> 
+        Leverage agile frameworks to provide a robust synopsis for high level
+        overviews. Iterative approaches to corporate strategy foster collaborative
+        thinking to further the overall value proposition. Organically grow the
+        holistic world view of disruptive innovation via workplace diversity and
+        empowerment.</p>
+        <p><strong>How does it affect the important people in my life?</strong>
+        Bring to the table win-win survival strategies to ensure proactive
+        domination. At the end of the day, going forward, a new normal that has
+        evolved from generation X is on the runway heading towards a streamlined
+        cloud solution. User generated content in real-time will have multiple
+        touchpoints for offshoring.</p>
+        <p><strong>Why do I do this? What is the benefit for me?</strong>
+        Capitalise on low hanging fruit to identify a ballpark value added activity
+        to beta test. Override the digital divide with additional clickthroughs from
+        DevOps. Nanotechnology immersion along the information highway will close
+        the loop on focusing solely on the bottom line.</p>
+        <h4>being resentful</h4>
+        <p><strong>How does it affect me? How do I act and feel?</strong> 
+        Podcasting operational change management inside of workflows to establish a
+        framework. Taking seamless key performance indicators offline to maximise
+        the long tail. Keeping your eye on the ball while performing a deep dive on
+        the start-up mentality to derive convergence on cross-platform integration.</p>
+        <p><strong>How does it affect the important people in my life?</strong>
+        Collaboratively administrate empowered markets via plug-and-play networks.
+        Dynamically procrastinate B2C users after installed base benefits.
+        Dramatically visualize customer directed convergence without revolutionary
+        ROI.</p>
+        <p><strong>Why do I do this? What is the benefit for me?</strong>
+        Efficiently unleash cross-media information without cross-media value.
+        Quickly maximize timely deliverables for real-time schemas. Dramatically
+        maintain clicks-and-mortar solutions without functional solutions.</p>
       </columns>
     </row>
   </container>
@@ -83,7 +72,7 @@ subject: Faster Scale App Report
 
   <container class="behaviors">
     <row>
-      <columns valign="middle" style="padding: 10px;">
+      <columns valign="middle">
         <h2 style="margin-bottom: 0;">Selected Emotions:</h2>
       </columns>
     </row>
@@ -119,4 +108,17 @@ subject: Faster Scale App Report
     </row>
   </container>
 
-  <spacer size="16"></spacer>
+  <spacer size="8"></spacer>
+
+  <container class="footer">
+    <row>
+      <columns valign="middle">
+        <center>
+          <p class="text-center">
+            <a href="https://fasterscaleapp.com/privacy">Privacy</a> | 
+            <a href="https://fasterscaleapp.com/terms">Terms</a>
+          </p>
+        </center>
+      </columns>
+    </rows>
+  </container>
