Implementing design feedback

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,8 +10,12 @@ subject: Faster Scale App Report
         <h1 class="text-center" style="margin-bottom: 0;">Faster Scale App Report</h1>
       </columns>
     </row>
+  <spacer size="8"></spacer>
     <row>
       <columns>
+        <img width="400"
+             src=""></img>
+  <spacer size="8"></spacer>
         <p>Hello there! Erreth has set you as one of their report recipients.
         These reports are sent out when Erreth scores above 5 in their checkin.
         This means that they might be struggling emotionally, and you should
