Last little updates

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -77,7 +77,7 @@ subject: Faster Scale App Report
   <container class="behaviors">
     <row>
       <columns valign="middle">
-        <h2 style="margin-bottom: 0;">Selected Emotions:</h2>
+        <h2 style="margin-bottom: 0;">Selected Behaviors:</h2>
       </columns>
     </row>
     <row>
@@ -120,7 +120,8 @@ subject: Faster Scale App Report
         <center>
           <p class="text-center">
             <a href="https://fasterscaleapp.com/privacy">Privacy</a> | 
-            <a href="https://fasterscaleapp.com/terms">Terms</a>
+            <a href="https://fasterscaleapp.com/terms">Terms</a> |
+            <a href="%unsubscribe_url%">Unsubscribe</a>
           </p>
         </center>
       </columns>
